--- a/Lab 2/solutions/prelab2/2.1.tex
+++ b/Lab 2/solutions/prelab2/2.1.tex
@@ -1,1 +1,1 @@
-ifconfig eth0 address 128.143.2.3/16 -broadcast 128.143.255.255
+ifconfig eth0 128.143.2.3 netmask 255.255.0.0 broadcast 128.143.255.255
