Rewritten/added answers for question in lab 1.

--- a/Lab 1/solutions/lab1/5.1.tex
+++ b/Lab 1/solutions/lab1/5.1.tex
@@ -1,1 +1,1 @@
-In order to change the name of the PC you need to edit the files: /etc/hosts & /etc/hostname.
+In order to change the name of the PC you need to edit the files: /etc/hosts and /etc/hostname.
