--- a/Lab 1/solutions/lab1/5.2.tex
+++ b/Lab 1/solutions/lab1/5.2.tex
@@ -1,1 +1,1 @@
-In order to check if the PC perfoms IP forwarding you can check one of the following files: /proc/sys/net/ipv4/ip_forward or /etc/sysctl.conf.
+The following files determine wether the PC performs IP forwarding or not: /proc/sys/net/ipv4/ip_forward or /etc/sysctl.conf.
