--- a/Lab 1/solutions/lab1/6.2.tex
+++ b/Lab 1/solutions/lab1/6.2.tex
@@ -1,1 +1,1 @@
-When pinging the loopback interface the message does not leave the pc and therefor is not put on the network. Pinging the local Ethernet interface gives the same results: software makes sure the packets are not sent on to the network since they are destined for the host itself.
+When pinging the loopback interface the message does not leave the pc and therefor is not put on the network. Pinging the local Ethernet interface amounts to the same results: software makes sure the packets are not put on the network since they are destined for the host itself.
