Changes/additions to solutions lab 2

--- a/Lab 2/solutions/lab2/3.A.3.tex
+++ b/Lab 2/solutions/lab2/3.A.3.tex
@@ -1,1 +1,1 @@
-ARP sends a broadcast message (packet 1). The device whose IP matches the queried one responds with its MAC-address (packet 2).
+ARP sends a broadcast message, requesting the MAC Address of the device which has 10.0.1.12 as IP address (packet 1). The device whose IP matches the queried one responds with its MAC-address (packet 2).
