--- a/Lab 2/solutions/lab2/3.C.1.tex
+++ b/Lab 2/solutions/lab2/3.C.1.tex
@@ -1,1 +1,2 @@
-ARP stops after 5 retransmissions (so 6 messages in total). The time between two messages is 1 second.
+ARP stops after 5 retransmissions (so 6 messages in total). The time between two consecutive ARP messages is 1 second.
+The packets can be seen at the file "traces/3-C.pcapng".
