--- a/Lab 2/solutions/lab2/3.C.2.tex
+++ b/Lab 2/solutions/lab2/3.C.2.tex
@@ -1,1 +1,1 @@
-Because IP is an end-to-end protocol. ARP is a node-to-node protocol.
+Because IP is an end-to-end protocol. ARP is a node-to-node protocol. They both work on different network layers.
