--- a/Lab 2/solutions/lab2/4.1.a.tex
+++ b/Lab 2/solutions/lab2/4.1.a.tex
@@ -1,2 +1,3 @@
-eth0: MTU = 1500
-lo: MTU = 65536
+PC1 has 2 network interfaces: eth0 and lo. \newline
+
+The Maximum Transmission Unit of the interfaces is 1500 and 65536 respectively.
