--- a/Lab 2/solutions/lab2/ex9.A.1.tex
+++ b/Lab 2/solutions/lab2/ex9.A.1.tex
@@ -1,2 +1,1 @@
-source port: 49908
-dst port: 21
+The source port is 49908, the destination port is 21. This can be seen in the packets in the file "traces/9-A.pcapng".
