--- a/Lab 2/solutions/lab2/ex9.A.2.tex
+++ b/Lab 2/solutions/lab2/ex9.A.2.tex
@@ -1,2 +1,1 @@
-Login: student
-Password: mvkbj1n
+In the packets you can see a message with Request: USER student, and Request: PASS mvkbj1n (frame 5 and 11 respectively, file "traces/9-A.txt").
