--- a/Lab 2/solutions/lab2/3.A.1.tex
+++ b/Lab 2/solutions/lab2/3.A.1.tex
@@ -1,1 +1,1 @@
-The MAC-address is ff:ff:ff:ff:ff:ff.
+The destination MAC-address for an ARP request packet is ff:ff:ff:ff:ff:ff (the broadcast address).
