--- a/Lab 2/solutions/lab2/4.2.tex
+++ b/Lab 2/solutions/lab2/4.2.tex
@@ -1,2 +1,2 @@
-eth0 sends packets on the network so there's no guarantee that he receives as many packets as he sends.
-The lo interface sends packets to himself so he receives the same amount of packets as he sends.
+eth0 sends packets on the network to some other device, so there's no guarantee that the pc receives as many packets as it sends.
+The lo interface sends packets to the device itself, meaning it receives the same amount of packets as it sends.
