--- a/Lab 2/solutions/lab2/ex9-C.tex
+++ b/Lab 2/solutions/lab2/ex9-C.tex
@@ -1,1 +1,1 @@
-2 for robustness, 1 acknowledgment
+For each character typed, 2 packets with the character are transmitted for robustness. An additional packet is sent for an acknowledgment.
