Last minor tweaks + generated pdf labo 1

--- a/Lab 1/solutions/lab1/7.A.tex
+++ b/Lab 1/solutions/lab1/7.A.tex
@@ -1,10 +1,8 @@
-Data: \newline
-
+\newline Data:
 \begin{lstlisting}
 14:49:14.495773 IP 10.0.1.11 > 10.0.1.12: ICMP echo request, id 2448, seq 1, length 64
 14:49:14.496175 IP 10.0.1.12 > 10.0.1.11: ICMP echo reply, id 2448, seq 1, length 64
 \end{lstlisting}
-\newline
-Meaning: \newline
+Meaning: 
 
 The first part of the data is the timestamp on which the packet was received, IP was used from SRC ADDR > DST ADDR. The second part describes which ip protocol is used, in this case ICMP. It also specifies if it is a request/reply message, which id the message has, the sequence and the lenght of the packet.
