--- a/Lab 1/solutions/lab1/5.2.tex
+++ b/Lab 1/solutions/lab1/5.2.tex
@@ -1,1 +1,1 @@
-The following files determine wether the PC performs IP forwarding or not: /proc/sys/net/ipv4/ip_forward or /etc/sysctl.conf.
+The following files determine wether the PC performs IP forwarding or not: /proc/sys/net/ipv4/ip\_forward or /etc/sysctl.conf. The value 1 indicates that ip forwarding is enabled, 0 means disabled.
