Lab 3 solutions 4-7 + cleanup/adjustments traces

--- a/Lab 3/lab3.tex
+++ b/Lab 3/lab3.tex
@@ -534,7 +534,7 @@ A router or host uses a routing table to determine the next hop of the path of a
 		\end{cmdblock}
 
 		Note that gateways with IP addresses 10.0.1.61, 10.0.1.71, and 10.0.1.81 do not exist. However, PC1 still sends ARP Request packets for these IP addresses.
-	\item Save the output of Wireshark and PC1’s routing table.
+	\item Save the output of Wireshark and PC1's routing table.
 \end{enumerate}
 
 \begin{questions}
