--- a/Lab 3/groupid.tex
+++ b/Lab 3/groupid.tex
@@ -1,7 +1,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %        Fill in your name and group ID        %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\author{Johan Bergs}
+\author{Stan Draulans \and Sam Mylle \and Federico Quin \and Group 3}
 %\author{Name 1 \and Name 2 \and Name 3 \and Group groupID}  
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
