--- a/Lab 3/solutions/lab3/2.D.1.tex
+++ b/Lab 3/solutions/lab3/2.D.1.tex
@@ -1,37 +1,10 @@
 Step 1:
-\begin{verbatim}
-Codes: C - connected, S - static, R - RIP, M - mobile, B - BGP
-       D - EIGRP, EX - EIGRP external, O - OSPF, IA - OSPF inter area 
-       N1 - OSPF NSSA external type 1, N2 - OSPF NSSA external type 2
-       E1 - OSPF external type 1, E2 - OSPF external type 2
-       i - IS-IS, su - IS-IS summary, L1 - IS-IS level-1, L2 - IS-IS level-2
-       ia - IS-IS inter area, * - candidate default, U - per-user static route
-       o - ODR, P - periodic downloaded static route
-
-Gateway of last resort is not set
-
-     10.0.0.0/24 is subnetted, 2 subnets
-C       10.0.2.0 is directly connected, FastEthernet0/0
-C       10.0.3.0 is directly connected, Vlan1
-\end{verbatim}
+\lstinputlisting{traces/2-d.1.txt}
 
 Step 2/3:
-\begin{verbatim}
-Codes: C - connected, S - static, R - RIP, M - mobile, B - BGP
-       D - EIGRP, EX - EIGRP external, O - OSPF, IA - OSPF inter area 
-       N1 - OSPF NSSA external type 1, N2 - OSPF NSSA external type 2
-       E1 - OSPF external type 1, E2 - OSPF external type 2
-       i - IS-IS, su - IS-IS summary, L1 - IS-IS level-1, L2 - IS-IS level-2
-       ia - IS-IS inter area, * - candidate default, U - per-user static route
-       o - ODR, P - periodic downloaded static route
+\lstinputlisting{traces/2-d.3.txt}
 
-Gateway of last resort is not set
 
-     10.0.0.0/24 is subnetted, 3 subnets
-C       10.0.2.0 is directly connected, FastEthernet0/0
-C       10.0.3.0 is directly connected, Vlan1
-S       10.0.1.0 [1/0] via 10.0.2.22
-                 is directly connected, FastEthernet0/0
-\end{verbatim}
-
-EXPLAIN HERE
+The first part of an entry describes the type of route. In our case we have either C or S
+(C meaning that the route to the subnet is directly connected to the interface , S meaning
+that the entry is static (added by us)). The second part ($10.0.x.0$ is directly connected...) describes on which interface packets should be routed, according to the subnet.
