--- a/Lab 2/solutions/lab2/5.1.tex
+++ b/Lab 2/solutions/lab2/5.1.tex
@@ -5,4 +5,25 @@ After: \newline
 \lstinputlisting{traces/5.3.txt}
 
 \newline
-The ifconfig command lists all the network interfaces on the pc. For each interface it displays the hardware (MAC) address, the ipv4 and ipv6 address, the broadcast address, the netmask, the MTU, the amount of packets and data received and transmitted, ...
+The ifconfig command lists all the network interfaces on the pc (in our case eth0, eth1 and internet). \\
+
+For each interface/network device it displays a number of things:
+\begin{itemize}
+	\item Link encap: indicates what kind of device this is. In our case this is either an Ethernet device, or a Local Loopback device.
+	\item HWaddr: the MAC address of the interface.
+	\item inet addr: the IPv4 address of the interface.
+	\item Bcast: the IPv4 address on which the interface can send broadcast packets.
+	\item Mask: the netmask associated with the interface.
+	\item inet6 addr: the IPv6 address of the interface.
+	\item Scope: determines the routing scope for this interface. 
+	\item MTU: the Maximum Transmission Unit.
+	\item Metric: this value decides the priority of the interface, the higher the value the higher the priority.
+	\item RX packets: the amount of received packets (normal packets, errored packets, ...).
+	\item TX packets: the amount of transmitted packets (normal packets, errored packets, ...).
+	\item collisions: the amount of collisions that have happened on the interface.
+	\item txqueuelen: the length of the transmit queue of the interface.
+	\item RX bytes: the amount of bytes received.
+	\item TX bytes: the amount of bytes transmitted.
+	\item Interrupt: the interrupt line used by this device.
+	\item Memory: the memory address used for shared memory for this device.
+\end{itemize}
