Small fix to 5.1

--- a/Lab 2/solutions/lab2/5.1.tex
+++ b/Lab 2/solutions/lab2/5.1.tex
@@ -25,5 +25,5 @@ For each interface/network device it displays a number of things:
 	\item RX bytes: the amount of bytes received.
 	\item TX bytes: the amount of bytes transmitted.
 	\item Interrupt: the interrupt line used by this device.
-	\item Memory: the memory address used for shared memory for this device.
+	\item Memory: the memory addresses used for shared memory for this device.
 \end{itemize}
