Renamed file names + syntax fixes in tex files

--- a/Lab 2/solutions/lab2/4.1.b.tex
+++ b/Lab 2/solutions/lab2/4.1.b.tex
@@ -1,7 +1,7 @@
 The PC has:
-\begin{tabular}
+\begin{itemize}
 	\item sent 1175 and received 1105 IP datagrams
 	\item sent and received 59 ICMP messages
 	\item sent 134 and received 196 UDP datagrams
 	\item sent 992 and received 846 TCP segments
-\end{tabular}
+\end{itemize}
