--- a/Lab 2/solutions/lab2/5.1.tex
+++ b/Lab 2/solutions/lab2/5.1.tex
@@ -1,13 +1,11 @@
 Before: \newline
 \lstinputlisting{traces/5.1.txt}
-\newline
 After: \newline
 \lstinputlisting{traces/5.3.txt}
 
-\newline
 The ifconfig command lists all the network interfaces on the pc (in our case eth0, eth1 and internet). \\
 
-For each interface/network device it displays a number of things:
+For each interface/network device it displays a number of things: \\
 \begin{itemize}
 	\item Link encap: indicates what kind of device this is. In our case this is either an Ethernet device, or a Local Loopback device.
 	\item HWaddr: the MAC address of the interface.
