Corrected typos lab 1 (little bit reformatting)

--- a/Lab 1/solutions/lab1/6.3.tex
+++ b/Lab 1/solutions/lab1/6.3.tex
@@ -5,9 +5,10 @@ We've pinged 4 different sites:
 	\item www.worldcrm.com (chinese site)
 	\item www.ameblo.jp (japanese site)
 \end{itemize}
-The japanese site resulted in the highest round trip time of the 4 sites. \newline
+The japanese site resulted in the highest round trip time of the 4 sites, because it is located the furthest. \newline
 
 \lstinputlisting{traces/6.3.google.txt}
 \lstinputlisting{traces/6.3.github.txt}
+\newpage
 \lstinputlisting{traces/6.3.worldcrm.txt}
 \lstinputlisting{traces/6.3.ameblo.txt}
