--- a/Lab 1/solutions/lab1/7.A.tex
+++ b/Lab 1/solutions/lab1/7.A.tex
@@ -5,4 +5,4 @@
 \end{lstlisting}
 Meaning: 
 
-The first part of the data is the timestamp on which the packet was received, IP was used from SRC ADDR > DST ADDR. The second part describes which ip protocol is used, in this case ICMP. It also specifies if it is a request/reply message, which id the message has, the sequence and the lenght of the packet.
+The first part of the data is the timestamp on which the packet was received, which protocol was used (IP), from SRC ADDR > DST ADDR. The second part describes which ip protocol is used, in this case ICMP. It also specifies if it is a request/reply message, which id the message has, the sequence number and the length of the packet.
