--- a/Lab 1/solutions/lab1/8.tex
+++ b/Lab 1/solutions/lab1/8.tex
@@ -1,2 +1,2 @@
 The files with the captured data can be found at "/traces/8.pcap" and "/traces/8.txt".
-The difference between the tcpdumb file and the wireshark file is that wireshark dissects every bit of the packet. Every bit/sequence of bits in the packet is analyzed and interpreted. As a result of that, the ethernet header is also analyzed, as opposed to tcpdump.
+The difference between the tcpdump file and the wireshark file is that wireshark dissects every bit of the packet. Every bit/sequence of bits in the packet is analyzed and interpreted. As a result of that, the ethernet header is also analyzed, as opposed to tcpdump.
