--- a/Lab 1/solutions/prelab1/2.tex
+++ b/Lab 1/solutions/prelab1/2.tex
@@ -1,3 +1,6 @@
-By using the following command: ls -la /etc/fstab.
-The output on our machine looks like this: -rw-rw-r-- 1 root root 594 oct.  31  2015 /etc/fstab.
+By using the following command:
+\hspace*{1cm} \begin{cmdblock}
+> ls -la /etc/fstab 
+\end{cmdblock}
+The output on our machine looks like this: -rw-rw-r-- 1 root root 594 oct.  31  2015 /etc/fstab. \\
 The file size is 594 bytes.
