--- a/Lab 1/solutions/prelab1/4.tex
+++ b/Lab 1/solutions/prelab1/4.tex
@@ -1,1 +1,4 @@
-The command you can use for that is: cp mydata labdata/
+The command you can use for that is:
+\begin{cmdblock}
+> cp mydata labdata/
+\end{cmdblock}
