--- a/Lab 1/solutions/prelab1/7.tex
+++ b/Lab 1/solutions/prelab1/7.tex
@@ -1,2 +1,5 @@
-You'll have to use the following command: rm -rf mydirectory/*
+You'll have to use the following command: 
+\begin{cmdblock}
+rm -rf mydirectory/*
+\end{cmdblock}
 Be careful though, especially when using sudo.
