--- a/Lab 1/solutions/prelab1/5.tex
+++ b/Lab 1/solutions/prelab1/5.tex
@@ -1,1 +1,4 @@
-You can do that using the following command: cp -r ./mydirectory/* ./newdirectory/
+You can do that using the following command:
+\begin{cmdblock}
+> cp -r ./mydirectory/* ./newdirectory/
+\end{cmdblock}
