--- a/Lab 2/solutions/prelab2/3.tex
+++ b/Lab 2/solutions/prelab2/3.tex
@@ -1,1 +1,3 @@
-tcpdump -n "(src host 10.0.1.12 or dst host 10.0.1.12) and icmp"
+\begin{cmdblock}
+> tcpdump -n "(src host 10.0.1.12 or dst host 10.0.1.12) and icmp"
+\end{cmdblock}
