--- a/Lab 2/solutions/lab2/5.1.tex
+++ b/Lab 2/solutions/lab2/5.1.tex
@@ -7,7 +7,7 @@ The ifconfig command lists all the network interfaces on the pc (in our case eth
 
 For each interface/network device it displays a number of things: \\
 \begin{itemize}
-	\item Link encap: indicates what kind of device this is. In our case this is either an Ethernet device, or a Local Loopback device.
+	\item Link encap: indicates what kind of device this is. In our case this is either an Ethernet device, or a Local Loopback (virtual) device.
 	\item HWaddr: the MAC address of the interface.
 	\item inet addr: the IPv4 address of the interface.
 	\item Bcast: the IPv4 address on which the interface can send broadcast packets.
