--- a/Lab 2/solutions/prelab2/1.tex
+++ b/Lab 2/solutions/prelab2/1.tex
@@ -1,1 +1,3 @@
-ifconfig eth0 128.143.2.3 netmask 255.255.0.0 broadcast 128.143.255.255
+\begin{cmdblock}
+> ifconfig eth0 128.143.2.3 netmask 255.255.0.0 broadcast 128.143.255.255
+\end{cmdblock}
