--- a/Lab 2/solutions/prelab2/10.tex
+++ b/Lab 2/solutions/prelab2/10.tex
@@ -1,1 +1,3 @@
-tcp \&\& (ip.dst == 10.0.1.12 || ip.src == 10.0.1.12 ) \&\& tcp.port == 10
+\begin{cmdblock}
+> tcp && (ip.dst == 10.0.1.12 || ip.src == 10.0.1.12 ) && tcp.port == 10
+\end{cmdblock}
