--- a/Lab 3/solutions/lab3/5.3.tex
+++ b/Lab 3/solutions/lab3/5.3.tex
@@ -1,4 +1,4 @@
-When Router1 receives the ICMP request for subnet $10.0.3.0/24$, it determines that the request should not be sent to himself, but to another host (namely Router2's vlan1 interface). Router1 will inform PC2 of this, by sending a redirect ICMP message (as captured in Wireshark). All the captured packets can be found in "traces/5.6.pcapng".
+When Router1 receives the ICMP request for subnet $10.0.3.0/24$, it determines that the request should not be sent to himself, but to another host (namely Router2's vlan1 interface). Router1 will inform PC2 of this, by sending a redirect ICMP message (as captured in Wireshark). All the captured packets can be found at "traces/5.6.pcapng".
 
 
 \begin{verbatim}
