--- a/Lab 3/solutions/lab3/7.1.tex
+++ b/Lab 3/solutions/lab3/7.1.tex
@@ -23,4 +23,4 @@ The redirect packet:
 The ping output:
 \lstinputlisting{traces/7.5.f.ping.txt}
 
-\textit{All the packets can be found at "traces/7.5.f.pcapng" (there are alot of 'junk' packets because of the reason listed above).}
+\textit{All the packets can be found at "traces/7.5.f.pcapng" (with alot of 'junk' packets because of the reason listed above).}
