Some minor fixes

--- a/Lab 5/solutions/prelab5/2.tex
+++ b/Lab 5/solutions/prelab5/2.tex
@@ -1,4 +1,2 @@
 Server-side: nttcp -i -l500 -n4 -p2222 \\
-Client-side: nttcp -ts -l500 -n4 -p2222 10.0.2.6 \\
-
-NOTE: kunne jullie dit nakijke aub??? bij mijn wireshark geeft da rare dingen, ma ik zie ni wa da anders is
+Client-side: nttcp -ts -l500 -n4 -p2222 10.0.2.6
