--- a/Lab 5/solutions/prelab5/7.tex
+++ b/Lab 5/solutions/prelab5/7.tex
@@ -1,3 +1,3 @@
-The initial value is calculated using some estimate of the round-trip time. \\
-When the timer expires, the packet is assumed to be lost (potentially incorrect).
+The initial value of a timer is calculated using some estimate of the round-trip time. \\
+When this timer expires, the packet is assumed to be lost (potentially incorrect).
 The timeout value will be doubled, giving the retransmissions more time.
