--- a/Lab 5/groupid.tex
+++ b/Lab 5/groupid.tex
@@ -1,7 +1,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %        Fill in your name and group ID        %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\author{Johan Bergs}
+\author{Sam Mylle \and Frederico Quin, \and Stan Draulans}
 %\author{Name 1 \and Name 2 \and Name 3 \and Group groupID}  
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
