--- a/Lab 4/solutions/prelab4/1.tex
+++ b/Lab 4/solutions/prelab4/1.tex
@@ -1,3 +1,3 @@
-echo "1" > /proc/sys/net/ipv4/ip_forward \\
+\begin{verbatim}echo "1" > /proc/sys/net/ipv4/ip_forward \end{verbatim} \\
 When rebooting, these changes will be reset. So when you want the ip forwarding to be permanent, you'll have to use: \\
-sysctl -w net.ipv4.ip_forward=1
+\begin{verbatim}sysctl -w net.ipv4.ip_forward=1\end{verbatim}
