--- a/Lab 6/solutions/lab6/1.C.3.tex
+++ b/Lab 6/solutions/lab6/1.C.3.tex
@@ -1,2 +1,2 @@
-Assuming that PC1 and PC3 would have the necessary routing table entries to route to eachother, the mac addresses would differ when sending messages from PC1 and PC3. As for the traceroute, PC2 would be the first hop, and PC3 would be the second hop. \\
+Assuming that PC1 and PC3 would have the necessary routing table entries to route to eachother, the MAC addresses would differ when sending messages from PC1 and PC3. As for the traceroute, PC2 would be the first hop, and PC3 would be the second hop. \\
 
