--- a/Lab 6/solutions/lab6/1.C.2.tex
+++ b/Lab 6/solutions/lab6/1.C.2.tex
@@ -1,3 +1,3 @@
-TODO : include output. \\
+\lstinputlisting{traces/1-c.5.txt}
 
-Because PC2's interfaces are configured as a bridge. This means that the interfaces can not be used as you would normally.
+PC2 is not visible from PC1 because PC2's interfaces are configured as a bridge. This means that the interfaces can not be used as you would normally.
