--- a/Lab 7/lab7.tex
+++ b/Lab 7/lab7.tex
@@ -560,7 +560,7 @@ server.
 \begin{questions}
 	\q{2.D.a}{Include the Wireshark data of the first three DHCP packets that are exchanged between PC3 and PC2.}
 	\q{2.D.6.a}{Does the DHCP relay server modify DHCP packets or the IP header? If so, what are the modifications?}
-	\q{2.D.6.b}{How does the relay agent redirect the replies from the DHCP server? Does it LAB 7- PAGE 20 broadcast them or unicast them to the DHCP client?}
+	\q{2.D.6.b}{How does the relay agent redirect the replies from the DHCP server? Does it broadcast them or unicast them to the DHCP client?}
 	\q{2.D.6.c}{Is there a difference in the response of the DHCP server as compared to the DHCP configuration of PC1? If so, explain the difference.}
 	\q{2.D.6.d}{How does the DHCP server (PC2) know on which network PC3 is located, when it receives the DHCP request?}
 	\q{2.D.6.e}{What is the destination IP address of the first DHCP packet that the DHCP server sends to PC3?}
@@ -574,7 +574,7 @@ Figure \ref{fig:lab7-part3} shows a network configuration which can be found in 
 
 \begin{itemize}
 	\item The SOHO network is a private network with multiple hosts (PC1 and PC4) and one IP router (PC2).
-	\item The IP router of the SOHO network (SOHO router) provides access to the public Internet by connecting to a router of an Internet service provider. The SOHO router obtains a single IP address on the “public” interface of the SOHO network via DHCP from a DHCP server (PC3) of the Internet service provider.
+	\item The IP router of the SOHO network (SOHO router) provides access to the public Internet by connecting to a router of an Internet service provider. The SOHO router obtains a single IP address on the "public" interface of the SOHO network via DHCP from a DHCP server (PC3) of the Internet service provider.
 	\item The SOHO router works as a DHCP server and NAT server for the hosts in the SOHO network.
 \end{itemize}
 
