--- a/Lab 7/solutions/lab7/1.B.a.tex
+++ b/Lab 7/solutions/lab7/1.B.a.tex
@@ -1,2 +1,6 @@
+\lstinputlisting{traces/1-b.Router2.txt}
 
-TODO explanation + include output
+The inside local address is assigned to a machine inside a network. This IP address is unique within this network, but might not be unique outside of the network.
+Therefore, a router on which NAT is enabled will replace this local address with an isnide global address.
+An outside global address is public, and it is reachable through the internet. \\
+The outside local address is the real IP address of the machine in another NAT network.
