--- a/Lab 7/solutions/lab7/1.B.c.tex
+++ b/Lab 7/solutions/lab7/1.B.c.tex
@@ -1,2 +1,3 @@
-
-TODO include data -> ip address translated because of nat etc
+\lstinputlisting{traces/1.B.c.data}
+The first two packets are a request and a reply while the packets were behind the NAT router.
+The last two packets are a request and a reply while the packets were in the public network.
